<resources>
    <string name="app_name">PUM - Projekty</string>
    <string name="project_label">Wprowadzenie do platformy Android</string>
    <string name="project_label2">Zestaw zadań</string>
    <string name="author">Radosław Gorczyca</string>
    <string name="flashlight">Latarka</string>
    <string name="guess_my_number">Zgadnij moją liczbę</string>
    <string name="quadratic_functions">Funkcje kwadratowe</string>
    <string name="white">Biały</string>
    <string name="red">Czerwony</string>
    <string name="green">Zielony</string>
    <string name="blue">Niebieski</string>
    <string name="permission_denied_write_settings">Odmówiono dostępu do zmiany ustawień systemu.</string>
    <string name="guess_my_number_welcome_string">Witaj w grze \"Zgadnij moją liczbę\"!\nTwoim zadaniem jest odgadnięcie wylosowanej przeze mnie liczby z zakresu: -2000 do 2000. Swój traf wpisuj w polu tekstowym poniżej, a ja będę Cię informować, czy prawidłowa liczba jest większa czy mniejsza. Powodzenia!</string>
    <string name="here_write_your_guess">Wpisz tu swoją liczbę…</string>
    <string name="bigger">Więcej!</string>
    <string name="smaller">Mniej!</string>
    <string name="congratulations_the_correct_number_was">Brawo! Prawidłowa liczba to %1$d!</string>
    <string name="draw_new_number">Wylosować nową liczbę?</string>
    <string name="draw">Losuj</string>
    <string name="number_of_tries">Próby: %1$d</string>
    <string name="number_of_points">Punkty: %1$d</string>
    <string name="error_insert_correct_number">Wprowadź prawidłową liczbę!</string>
    <string name="pum_introduction">PUM - Wprowadzenie</string>
    <string name="project_introduction">Projekty zaliczeniowe dla przedmiotu PUM</string>
    <string name="project_group">Informatyka II stopnia, niestacjonarne, rok I semestr II, ISI gr. 1</string>
    <string name="introduction_to_android">Wprowadzenie do platformy Android</string>
    <string name="project_GUI">Podstawowe elementy GUI</string>
    <string name="project_files_photos_and_TTS">Pliki, zdjęcia i mechanizm TTS</string>
    <string name="project_web_view">Wykorzystanie WebView</string>
    <string name="project_dialogs_and_intents">Dialogi i mechanizm intencji</string>
    <string name="project_end">Projekt zaliczeniowy</string>
    <string name="quadratic_functions_instructions">Aplikacja służy do obliczania własności funkcji kwadratowej. Wpisz w odpowiednie pola wartości całkowite a, b i c, następnie dotknij przycisk OBLICZ.</string>
    <string name="quadratic_function_pattern">f(x) = ax^2+bx+c</string>
    <string name="quadratic_function">f(x) = %1$.0fx^2+(%2$.0f)x+(%3$.0f)</string>
    <string name="count">Oblicz</string>
    <string name="results">Wyniki:</string>
    <string name="delta">Δ = b^2–4ac = (%2$.0f)^2–4*(%1$.0f)*(%3$.0f) = %4$.0f</string>
    <string name="zero_points">Miejsca zerowe:</string>
    <string name="no_zero_points">Brak miejsc zerowych.</string>
    <string name="x0">x0 = (-b)/(2a) = (-(%2$.0f))/(2*(%1$.0f)) = %3$.2f</string>
    <string name="x1">x1 = (-b+sqrt(Δ))/(2a) = (-(%2$.0f)-sqrt(Δ))/(2*(%1$.0f)) = %3$.2f</string>
    <string name="x2">x2 = (-b-sqrt(Δ))/(2a) = (-(%2$.0f)+sqrt(Δ))/(2*(%1$.0f)) = %3$.2f</string>
    <string name="peak">Współrzędne wierzchołka paraboli:</string>
    <string name="p">p = -b/2a = -(%2$.0f)/2*(%1$.0f) = %3$.2f</string>
    <string name="q">q = -Δ/4a = -(%2$.0f)/4*(%1$.0f) = %3$.2f</string>
    <string name="w">W = (%1$.2f, %2$.2f)</string>
    <string name="y_cross_point">Punkt przecięcia z osią Y:</string>
    <string name="f0">f(0) = (0, %1$.0f)</string>
    <string name="insert_a">Wpisz a…</string>
    <string name="insert_b">Wpisz b…</string>
    <string name="insert_c">Wpisz c…</string>
    <string name="not_quadratic_function">Podana funkcja nie jest funkcją kwadratową!</string>
    <string name="traffic_lights">Światła drogowe</string>
    <string name="tic_tac_toe">Kółko krzyżyk</string>
    <string name="quiz">Quiz</string>
    <string name="ordering_pizza">Zamawianie pizzy</string>
    <string name="countries_shorts">Skróty nazw krajów</string>
    <string name="countries_shorts_xml_arrays">Skróty nazw krajów (tablice xml)</string>
    <string name="red_light">Czerwone</string>
    <string name="yellow_light">Żółte</string>
    <string name="green_light">Zielone</string>
    <string name="circles_wins">Kółko wygrywa!</string>
    <string name="crosses_wins">Krzyżyk wygrywa!</string>
    <string name="play_again">Zagraj ponownie</string>
    <string name="tied_game">Remis!</string>
    <string name="question_number">Pytanie %1$d/%2$d</string>
    <string name="points_number">Punkty: %1$d</string>
    <string name="what_item_you_see_on_the_picture">Jaki przedmiot widzisz na zdjęciu?</string>
    <string name="quiz_archery">Quiz - Łucznictwo</string>
    <string name="quiz_end_text">Świetny wynik! Dzięki za udział w quizie! :)</string>
    <string name="pie_thickness">Grubość ciasta</string>
    <string name="thick">Grube</string>
    <string name="thin">Cienkie</string>
    <string name="pie_size">Rozmiar pizzy</string>
    <string name="small">Mała</string>
    <string name="medium">Średnia</string>
    <string name="big">Duża</string>
    <string name="basic_ingredients_min_3">Podstawowe składniki (minimum 3)</string>
    <string name="ham">Szynka</string>
    <string name="cheese">Ser</string>
    <string name="mushrooms">Pieczarki</string>
    <string name="olives">Oliwki</string>
    <string name="bacon">Boczek</string>
    <string name="chicken">Kurczak</string>
    <string name="onion">Cebula</string>
    <string name="optional_ingredients_max_2">Dodatkowe składniki (max 2)</string>
    <string name="garlic">Czosnek</string>
    <string name="salami">Salami</string>
    <string name="shrimps">Krewetki</string>
    <string name="capers">Kapary</string>
    <string name="tuna">Tuńczyk</string>
    <string name="tomato_sauce">Sos pomidorowy</string>
    <string name="garlic_sauce">Sos czosnkowy</string>
    <string name="oregano">Oregano</string>
    <string name="order">Zamów</string>
    <string name="order_ingredient_ham">szynki</string>
    <string name="order_ingredient_cheese">sera</string>
    <string name="order_ingredient_mushrooms">pieczarek</string>
    <string name="order_ingredient_olives">oliwek</string>
    <string name="order_ingredient_bacon">boczku</string>
    <string name="order_ingredient_chicken">kurczaka</string>
    <string name="order_ingredient_onion">cebuli</string>
    <string name="order_ingredient_garlic">czosnku</string>
    <string name="order_ingredient_salami">salami</string>
    <string name="order_ingredient_shrimps">krewetek</string>
    <string name="order_ingredient_capers">kaparów</string>
    <string name="order_ingredient_tuna">tuńczyka</string>
    <string name="order_ingredient_tomato_sauce">sosu pomidorowego</string>
    <string name="order_ingredient_garlic_sauce">sosu czosnkowego</string>
    <string name="order_ingredient_oregano">oregano</string>
    <string name="error">Błąd</string>
    <string name="error_wrong_order">Złe zamówienie. Musisz dodać minimalnie 3 składniki podstawowe i maksymalnie 2 składniki opcjonalne.</string>
    <string name="ordered">"Zamówiono "</string>
    <string name="order_thickness_small">"małą "</string>
    <string name="order_thickness_medium">"średnią "</string>
    <string name="order_thickness_big">"dużą "</string>
    <string name="pizza_on">"pizzę na "</string>
    <string name="order_thickness_thin">"cienkim "</string>
    <string name="order_thickness_thick">"grubym "</string>
    <string name="dough_containing">"cieście, składającą się z "</string>
    <string name="pizza_price_will_be">"Cena pizzy to "</string>
    <string name="pln">" zł."</string>
    <string name="order_info">Zamówienie</string>
    <string name="shortcuts_conversion">Konwersja skrótów</string>
    <string name="to_do_list">Lista \"To Do\"</string>
    <string name="add_to_do_item">Dodaj nowe zadanie</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="name_to_do_task">Nazwij zadanie...</string>
    <string name="no_items">Brak zadań</string>
    <string name="error_fields_cannot_be_empty">Pole nie może być puste</string>
    <string name="to_do_item_details">Szczegóły zadania</string>
    <string name="is_done">Zakończone: %1$s</string>
    <string name="is_high_priority">Priorytetowe: %1$s</string>
    <string name="name">Nazwa: %1$s</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="details">Szczegóły</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="are_you_sure">Na pewno?</string>
    <string name="edit_to_do_item">Edytuj zadanie</string>
    <string name="high_priority">Wysoki priorytet:</string>
    <string name="save_to_file">Zapisz do pliku</string>
    <string name="due_date">Termin:</string>
    <string name="channel_name">Lista zadań</string>
    <string name="create_date">Data utworzenia</string>
    <string name="end_date">Data zakończenia</string>
    <string name="priority">Priorytet</string>
    <string name="sort_name">Nazwa</string>
    <string name="status">Status</string>
    <string name="video">Film</string>
    <string name="image">Zdjęcie</string>
    <string name="attachment">Dodaj załącznik</string>
    <string name="add_image">Dodaj zdjęcie</string>
    <string name="from_gallery_or_from_camera">Z galerii czy bezpośrednio z aparatu?</string>
    <string name="gallery">Galeria</string>
    <string name="camera">Aparat</string>
    <string name="add_video">Dodaj film</string>
    <string name="attachments">Załączniki:</string>
    <string name="details_create_date">Data utworzenia: %1$s</string>
    <string name="details_due_date">Termin: %1$s</string>
    <string name="details_end_date">Data zakończenia: %1$s</string>
    <string name="text_to_speech">Text-To-Speech</string>
    <string name="load_file">Załaduj plik</string>
    <string name="read">Czytaj</string>
    <string name="text_to_read">Wpisz tekst do przeczytania...</string>
    <string name="read_from_file">Wczytaj z pliku</string>
    <string name="dialog_message_read_text_from_file">Wpisane dane zostaną utracone.\nChcesz wczytać tekst z pliku?</string>
    <string name="TTS_language_not_supported">Text-To-Speech: Język nieobsługiwany!</string>
    <string name="TTS_initialization_failed">Text-To-Speech: Błąd inicjalizacji!</string>
    <string name="error_failed_to_create_dummy_file">Nieudane utworzenie pliku z tekstem!</string>
    <string name="english_lesson">Nauka angielskiego</string>
    <string name="camera_and_gallery">Aparat i galeria</string>
    <string name="open_camera">Otwórz aparat</string>
    <string name="open_gallery">Otwórz galerię</string>
    <string name="cant_open_gallery">Brak aplikacji umożliwiającej wykonanie akcji</string>
    <string name="in_which_language_you_want_to_write_words">W jakim języku chcesz wpisywać słówka?</string>
    <string name="in_english">Po angielsku</string>
    <string name="in_polish">Po polsku</string>
    <string name="which_mode">W jakim trybie?</string>
    <string name="learning">Nauka</string>
    <string name="test">Test</string>
    <string name="start">Start</string>
    <string name="about">O programie</string>
    <string name="about_message">PUM - Projekty\nv. 1.0\nRadosław Gorczyca</string>
    <string name="learning_finished">Ukończono naukę</string>
    <string name="end_test">Zakończ test</string>
    <string name="next">Następne</string>
    <string name="end_test_confirmation_message">Czy na pewno chcesz zakończyć test?</string>
    <string name="go_back">Powrót</string>
    <string name="find_pairs">Znajdź pary</string>
    <string name="interesting_places">Ciekawe miejsca</string>
    <string name="contact_book">Książka adresowa</string>
</resources>