<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuProject1Activity">

    <TextView
        android:id="@+id/project_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:text="@string/project_GUI"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_label2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:text="@string/project_label2"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_label" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:text="@string/author"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_label2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author">

        <Button
            android:id="@+id/button_task_traffic_lights"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/traffic_lights"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_task_tic_tac_toe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/tic_tac_toe"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_task_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/quiz"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_task_pizza"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/ordering_pizza"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_task_countries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/countries_shorts"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_task_countries_xml_arrays"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/countries_shorts_xml_arrays"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>