<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.gorczyca.pum.menu.MenuMainPageActivity">

    <TextView
        android:id="@+id/project_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:text="@string/project_introduction"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_label2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:text="@string/project_group"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_label" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:text="@string/author"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_label2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author">

        <Button
            android:id="@+id/button_project_introduction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:enabled="true"
            android:text="@string/introduction_to_android"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_project_GUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/project_GUI"
            android:textColor="@android:color/white" />

        <!--TODO Odblokuj projekt 3 po ukończeniu-->
        <Button
            android:id="@+id/button_project_files_photos_and_TTS"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/project_files_photos_and_TTS"
            android:textColor="@android:color/white" />

        <!--TODO Odblokuj projekt 4 po ukończeniu-->
        <Button
            android:id="@+id/button_project_web_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/project_web_view"
            android:textColor="@android:color/white" />

        <!--TODO Odblokuj projekt 5 po ukończeniu-->
        <Button
            android:id="@+id/button_project_dialogs_and_intents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/project_dialogs_and_intents"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_project_end"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/project_end"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
