<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projectEnd.ToDoAddOrEditActivity">

    <EditText
        android:id="@+id/edit_to_do_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name_to_do_task"
        android:inputType="textLongMessage"
        android:maxLength="255"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_high_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/high_priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_to_do_item_name" />

    <CheckBox
        android:id="@+id/check_high_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/label_high_priority"
        app:layout_constraintTop_toTopOf="@id/label_high_priority"
        app:layout_constraintBottom_toBottomOf="@id/label_high_priority"/>

    <TextView
        android:id="@+id/label_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/due_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_high_priority" />

    <Button
        android:id="@+id/button_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20.02.2020 08:00"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/label_due_date"
        app:layout_constraintBottom_toBottomOf="@id/label_due_date"
        app:layout_constraintStart_toEndOf="@id/label_due_date"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>